# goodfaith

./: .gitignore  .~c9_invoke_RFEroW.py  CHANGELOG.md  README.md  __main__.py  pythonenv.sh  requirements.txt  setup.cfg  testinstall.sh
core/: base.py  graph.py  scope.py
samples/: brevityinmotion-urls-max.txt  manifest-s3-httpx.json  scope.json  testcases.txt
src/goodfaith/: __main__.py
src/goodfaith/core/: graph.py  scope.py
