[metadata]
name = goodfaith
version = 0.0.1
author = Ryan Elkins
author_email = ryan@brevityinmotion.com
description = researchers must always hack in 'GOODFAITH'
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/brevityinmotion/goodfaith
project_urls =
    Bug Tracker = https://github.com/brevityinmotion/goodfaith/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL-3.0
    Operating System :: Linux/Unix

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts =
    goodfaith = goodfaith.__main__:main

[options.packages.find]
where = src